    f -> fac; h -> logvar; h0 -> logvar0
  - It's now possible to turn factor sampling off. This might be useful if one
    wants to include observed factors (instead of latent ones).
  - The function predloglik now takes an optional logical vector indicating
    for which component series the predictive log likelihood should be computed.
    Thanks to Stefan Voigt for implementing this.
  - Fixed a few more typos in the documentation.
  - The function corimageplot now has a new argument: these4order.
  - Some default settings have changed:
    * priorfacloadtype = "rowwiseng" (was: "normal")
    * priorfacload = 0.1 (was 1)
    * runningstore = 6 (was: 1)
  - Arguments to fsvsample were reordered.
  - Previous default plotting function plot.fsvsdraws has been renamed to
    plotalot. New default plotting function now shows a correlation matrix.
  - New generic extractor: cormat (cormat.fsvdraws and cormat.fsvsim)
  - Fixed namespace clashes between stochvol and factorstochvol (concerned
    logret and paratraceplot); now DEPENDS on stochvol

Changes in version 0.9.1
  - Default for argument "restrict" in fsvsample is now "none". This
    alleviates the problem of (potentially) introducing arbitrary zeros which
    are not in line with the data.
  - Fixed glitches in the documentation. Thanks to Gregor Zens for pointing
    these out.

Changes in version 0.9
  - Required changes to be compatible with stochvol 2.0.0. Concerns low-level
    functionality only.
  - References updated.

Changes in version 0.8.3
  - Default for argument "restrict" in fsvsample is now "auto". This does not
    require the end-user to pre-sort the data but instead imposes zeros
    in the factor loadings matrix according to a preliminary static
    factor analysis.
  - New function findrestrict.
  - New function orderident.
  - Changed default burn-in in fsvsample to 1000 (from 100).
  - Changed default value of runningstorethin in fsvsample to 10 (from 1).